// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bookshelf renders does not with active false 1`] = `
<Fragment>
  <div>
    <Connect(WithStyles(GenreSelector)) />
    <Connect(WithStyles(Filters)) />
  </div>
</Fragment>
`;

exports[`Bookshelf renders with books on bookshelf 1`] = `
<Fragment>
  <div>
    <Connect(WithStyles(GenreSelector)) />
    <Connect(WithStyles(Filters)) />
  </div>
  <Results
    booklist={
      Array [
        Object {
          "amazonAverageRating": 4.6,
          "amazonRatingsCount": 113,
          "categories": Array [
            "Family & Relationships",
          ],
          "description": "A complete guide to the concept of attachment parenting, which argues that parental responsiveness to a baby's needs leads to a well-adjusted child, offers tips on breastfeeding on demand, responding to a baby's cries, minimizing parent-child separation, and avoiding baby \\"gadgets.\\" Original.",
          "goodreadsAverageRating": 4.22,
          "goodreadsRatingsCount": 236,
          "isbn": "9780988995819",
          "price": "",
          "subtitle": "Instinctive Care for Your Baby and Young Child",
          "thumbnail": "http://books.google.com/books/content?id=daeq84DTC3IC&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api",
          "title": "Attachment Parenting",
        },
      ]
    }
    handleDelete={[Function]}
    handleSave={[Function]}
  />
</Fragment>
`;

exports[`Bookshelf renders with no books on bookshelf 1`] = `
<Fragment>
  <div>
    <Connect(WithStyles(GenreSelector)) />
    <Connect(WithStyles(Filters)) />
  </div>
  <Results
    booklist={Array []}
    handleDelete={[Function]}
    handleSave={[Function]}
  />
</Fragment>
`;
